rusty-cdk-macros/tests/fails/zipfile_wrong_extension.rs
use rusty_cdk_macros::zip_file;

fn example() {
    let file = zip_file!("package.tar.gz");
}

fn main() {}